# ableton-mcp

./: .gitignore  README.md  ableton_cli.py  build_template.py  create_human_groove_loop.py  festival_loop.py  pyproject.toml  run_session.py  scripts_demo_arr_rec.py  scripts_setup_template.py  scripts_voice_markers.py  session_1min_handpan.py  session_circular_breath.py  session_festival_energy.py  session_param_map.json  web_server.py
src/ableton_mcp/: __init__.py  osc_bridge.py  server.py
